tests/errors/symbol_not_found.ceos
extern foo(Int) -> Int

foo(1)
